--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -14,8 +14,11 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/category_list_item_cnsMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true">
 
         <TextView
             android:id="@+id/category_list_item_txtListingId"
